--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h3>New code changed to orange</h3>
     <p>More paragraph</p>
     <p>I am coding coding and coding</p>
+    <img src="decap.jpg" alt="">
+    <img src="cat.jpg" alt="">
 </body>
+
 </html>
