--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <p>I am coding coding and coding</p>
     <img src="decap.jpg" alt="">
     <img src="cat.jpg" alt="">
+    <img src="Photo rehan.jpg" alt="">
+    <img src="cAt.jpg" alt=">
 </body>
 
 </html>
